# Sofia-University

./: README.md
Arrays-Tasks/: Arrays-Tasks.sln
Arrays-Tasks/MatrixDiagonals/: MatrixDiagonals.cpp  MatrixDiagonals.vcxproj
Arrays-Tasks/Taskk/: Taskk.cpp  Taskk.vcxproj
Arrays-Tasks/TransponMatrix/: TransponMatrix.cpp  TransponMatrix.vcxproj
Functional-Programming/Week-1-Homework/: task1.hs  task2.hs  task3.hs  task4.hs  task5.hs  task6.hs  task7.hs  task8.hs  task9.hs
Functional-Programming/Week-1-In-Class/: hello.hs  task1.hs  task2.hs  task3.hs  task4.hs
Functional-Programming/Week-2-In-Class/: task1.hs  task2.hs  task3.hs  task4.hs  task5.hs  task6.hs  task7.hs
Intro-To-Programming/Arrays-Tasks/: Arrays-Tasks.sln
Intro-To-Programming/Draw-With-Loops/: Draw-With-Loops.sln
Intro-To-Programming/Functions/: Functions.sln
Intro-To-Programming/Pointers/: Pointers.sln
Intro-To-Programming/Tasks/: CMakeLists.txt  Week1-Tasks.sln  areaAndPerimeterOfRectangle.cpp  creeper.cpp  threeDigitNumbers.cpp  turtles.cpp
Intro-To-Programming/Tasks/Task1/: Task1.cpp  Task1.vcxproj
Intro-To-Programming/Tasks/Task2 -NumberSwap/: Task2 -NumberSwap.cpp  Task2 -NumberSwap.vcxproj  Task2 -NumberSwap.vcxproj.filters
Intro-To-Programming/Tasks/Task3-ThreeDigitsNumber/: Task3-ThreeDigitsNumber.cpp  Task3-ThreeDigitsNumber.vcxproj  Task3-ThreeDigitsNumber.vcxproj.filters
Intro-To-Programming/Tasks/Task4-Turtles/: Task4-Turtles.cpp  Task4-Turtles.vcxproj  Task4-Turtles.vcxproj.filters
Intro-To-Programming/Tasks/new/: hi.cpp
(+366 files in other folders)
